@@ -6,7 +6,7 @@
     <!-- shared properties for the pustefix projects -->
 
     <!-- IMPORTANT! Set this property to some random value! -->
-    <!-- <prop name="derefserver.signkey">123456secret</prop> -->
+    <prop name="derefserver.signkey">987foobarbaz123</prop>
     
     <!-- dump of the whole session on Exception -->
     <prop name="servlet.sessiondumponerror">true</prop>
@@ -33,12 +33,22 @@
         <prop name="sessioncleaner.timeout">600</prop>
       </otherwise>
     </choose>
-    <prop name="xmlserver.additionalinfo.implementation">de.schlund.pfixxml.perflogging.DefaultAdditionalTrailInfoImpl</prop>
     
     <!-- this defines a named switch ("default" in this case) that a servlet can watch to
        go into adminmode when the switch's status changes to true -->
-    <prop name="context.adminmode.default.status">off</prop>  
+    <prop name="context.adminmode.default.status">off</prop>
+    <prop name="xmlserver.additionalinfo.implementation">de.schlund.pfixxml.perflogging.DefaultAdditionalTrailInfoImpl</prop>
     
+    <choose>
+      <when test="$mode = 'test'">
+        <prop name="exception.java.lang.Throwable.processor">de.schlund.pfixxml.exceptionprocessor.UniversalExceptionProcessor</prop>
+      </when>
+    </choose>
     
+    <!-- Defines SSL ports used for redirect corresponding to the unsecure ports -->
+    <prop name="pfixcore.ssl_redirect_port.for.8080">8443</prop>
+    <prop name="pfixcore.ssl_redirect_port.for.9080">9443</prop>
+
   </properties>
+
 </standardprops>
